--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@testing-library/react": "11.2.2",
     "babel-loader": "^8.2.1",
     "css-loader": "^5.0.1",
-    "eslint": "7.9.0",
+    "eslint": "^7.9.0",
     "eslint-config-eda": "0.1.4",
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.1",
