--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,12 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "node",
+      "type": "pwa-chrome",
       "request": "launch",
-      "name": "Launch Program",
-      "program": "${workspaceFolder}/server/index.js"
-    }
+      "name": "Launch Chrome against localhost",
+      "url": "http://localhost:3000",
+      "webRoot": "${workspaceFolder}"
+    },
+    
   ]
 }
