--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,9 +9,7 @@
       "request": "launch",
       "name": "Launch Chrome against localhost",
       "url": "http://localhost:3000",
-      "webRoot": "${workspaceFolder}",
-      "runtimeArgs": ["--load-extension=${env:userprofile}/AppData/Local/Google/Chrome/User Data/Default/Extensions/fmkadmapgofadopljbjfkapdkoienihi/3.2.3_0"]
-
+      "webRoot": "${workspaceFolder}"
     },
     
   ]
